server/vm-k8s/k8s/base/up-to-date-exporter/service.yml
apiVersion: v1
kind: Service
metadata:
  name: up-to-date-exporter
spec:
  selector:
    app: up-to-date-exporter
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9333
      protocol: TCP
