server/vm-k8s/k8s/base/up-to-date-exporter/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: up-to-date-exporter
spec:
  rules:
  - host: "up-to-date-exporter.10.0.2.15.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: up-to-date-exporter
            port:
              number: 80
  ingressClassName: public
